# rust-web-template

./: .editorconfig  .env.example  .genignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  README-TEMPLATE.md  README.md  README.zh.md  SECURITY.md  _typos.toml  cargo-generate.toml  cliff.toml  clippy.toml  deny.toml  post-script.rhai  pre-script.rhai  rust-toolchain.toml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  template-ci.yml
examples/: README.md
fixtures/: README.md
licenses/: LICENSE-Apache-2.0  LICENSE-GPL-3.0  LICENSE-MIT
src/: error.rs  main.rs  router.rs  shutdown.rs
src/handlers/: health.rs  mod.rs
src/routes/: health.rs  mod.rs
tests/: README.md
