[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2024"
rust-version = "1.96.0"
authors = ["{{authors}}"]
description = "{{description}}"
documentation = "https://docs.rs/{{project-name}}"
homepage = "https://github.com/{{gh_username}}/{{project-name}}"
repository = "https://github.com/{{gh_username}}/{{project-name}}"
readme = "README.md"
license = "{{license}}"
keywords = []
categories = []
exclude = [".github/", "fixtures/", ".pre-commit-config.yaml", "_typos.toml", "cliff.toml"]

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
dotenvy = "0.15"
{%- if ask_middlewares contains "trace" or ask_middlewares contains "cors" or ask_middlewares contains "timeout" or ask_middlewares contains "compression" %}
tower-http = { version = "0.7", features = [
{%- if ask_middlewares contains "trace" %} "trace",{% endif -%}
{%- if ask_middlewares contains "cors" %} "cors",{% endif -%}
{%- if ask_middlewares contains "timeout" %} "timeout",{% endif -%}
{%- if ask_middlewares contains "compression" %} "compression-gzip",{% endif -%}
] }
{%- endif %}
{%- if ask_common_libs contains "uuid" %}
uuid = { version = "1", features = ["v4"] }
{%- endif %}
{%- if ask_common_libs contains "rand" %}
rand = "0.10"
{%- endif %}
{%- if ask_common_libs contains "serde_json" %}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
{%- endif %}
{%- if ask_common_libs contains "chrono" %}
chrono = "0.4"
{%- endif %}
{%- if ask_common_libs contains "reqwest" %}
reqwest = { version = "0.13", features = ["json"] }
{%- endif %}

[dev-dependencies]

[build-dependencies]

[features]


### Lint 规则
[lints.rust]
unsafe_code = "warn"      # 使用 unsafe 代码时告警（确需时可局部 #[allow]）
missing_docs = "warn"     # 公共项缺少文档注释时告警

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
dbg_macro = "warn"

### Working directory
[workspace]
members = []

### Production packaging configuration
[profile.release]
lto = "thin"          # 链接时优化，提升运行性能
codegen-units = 1     # 单编译单元，优化更充分（编译更慢）
strip = true          # 剥离调试符号，减小二进制体积

### Debug packaging configuration
[profile.dev]
